# Agent_memory_system

./: .dockerignore  .env  .env.example  .gitignore  DOCKER_README.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  Makefile  README-DEV.md  README.md  WEAVIATE_MIGRATION_SUMMARY.md  background.md  dev.sh  development.md  docker-compose.dev.yml  docker-compose.yml  env.example  prod.sh  pyproject.toml  start_weaviate_dev.sh  test_chat.py  test_embedding.py  test_embedding_simple.py  test_embedding_standalone.py  test_memory_retrieval.py  test_openai_client.py  test_storage_api.py  test_weaviate_data.py  test_weaviate_integration.py  view_storage.py
agent_memory_system/: main.py
agent_memory_system/api/: __init__.py  api.py  chat.py  memory_api.py  routes.py  websocket.py
agent_memory_system/core/: __init__.py
agent_memory_system/core/embedding/: embedding_service.py
agent_memory_system/core/memory/: memory_manager.py  memory_retrieval.py  memory_types.py  memory_utils.py
agent_memory_system/core/retrieval/: __init__.py  memory_retrieval.py  ranker.py  retrieval_engine.py  retriever.py
agent_memory_system/core/storage/: cache_store.py  graph_store.py  vector_store.py
agent_memory_system/data/: __init__.py
agent_memory_system/models/: __init__.py  api_models.py  config_model.py  memory_model.py  websocket_model.py
agent_memory_system/static/js/: chat.js  memory.js
agent_memory_system/templates/: index.html
agent_memory_system/tests/: __init__.py  test_api.py  test_integration.py  test_memory_types.py  test_memory_utils.py  test_performance.py  test_retrieval.py  test_storage.py
agent_memory_system/utils/: __init__.py  config.py  logger.py  openai_client.py
backend/: Dockerfile  pyproject.toml
backend/agent_memory_system/: __init__.py  main.py
backend/agent_memory_system/api/: __init__.py  api.py  chat.py  memory_api.py  routes.py
backend/agent_memory_system/core/: __init__.py
backend/agent_memory_system/core/embedding/: embedding_service.py
backend/agent_memory_system/core/memory/: __init__.py  memory_manager.py  memory_retrieval.py  memory_utils.py
backend/agent_memory_system/core/retrieval/: retrieval_engine.py
backend/agent_memory_system/core/storage/: __init__.py  cache_store.py  graph_store.py  vector_store.py
backend/agent_memory_system/models/: api_models.py  config_model.py  memory_model.py  websocket_model.py
backend/agent_memory_system/static/js/: chat.js  memory.js
backend/agent_memory_system/templates/: index.html
backend/agent_memory_system/tests/: test_integration.py  test_memory_utils.py  test_performance.py  test_storage.py
backend/agent_memory_system/utils/: config.py  openai_client.py
data/: faiss_index  faiss_index.map.npy
docs/architecture/: background.md  data_flow.md  deployment.md  error_handling.md  llm_interface.md  monitoring.md  prompt_templates.md  roadmap.md  security.md  system_architecture.md  test_client.md  test_data.md
examples/: api_providers_config.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: MainLayout.js
frontend/src/pages/: ChatPage.js  MemoryPage.js  SettingsPage.js  StoragePage.js
frontend/src/services/: api.js  websocket.js
scripts/: README.md  docker-start.bat  docker-start.sh  manage_ollama_models.sh  setup.bat  setup.sh  test-docker.sh  test_api_config.py
tests/client/: app.js  index.html  styles.css
tests/data/: data_generator.py  environment.py
tests/scenarios/: test_scenarios.py
